--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -41,7 +41,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           push: true
-          tags: lazymio/mdbx-remote:latest
+          tags: lazymio/link-shorter-rs:latest
       
       - name: Build and push with github ref
         if: "startsWith(github.ref, 'refs/tags')"
@@ -49,5 +49,5 @@ jobs:
         with:
           push: true
           tags: |
-            lazymio/mdbx-remote:latest
-            lazymio/mdbx-remote:${{github.ref_name}}
+            lazymio/link-shorter-rs:latest
+            lazymio/link-shorter-rs:${{github.ref_name}}
