--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-axum = "0.8.1"
+axum = { version = "0.8.1", features = ["form"] }
 clap = { version = "4.5.23", features = ["derive", "env"] }
 color-eyre = "0.6.3"
 dotenvy = "0.15.7"
@@ -17,3 +17,4 @@ chrono = "0.4.39"
 rand = "0.8.5"
 url = "2.5.4"
 urlencoding = "2.1.3"
+serde = {version = "1.0.217", features = ["derive"]}
